--- a/2023.1.2.md
+++ b/2023.1.2.md
@@ -1,4 +1,12 @@
-232. 用栈实现队列
+## 232. 用栈实现队列
+### 题目要求
+实现 MyQueue 类：
+```
+void push(int x) 将元素 x 推到队列的末尾
+int pop() 从队列的开头移除并返回元素
+int peek() 返回队列开头的元素
+boolean empty() 如果队列为空，返回 true ；否则，返回 false
+```
 
 ```c++
 class MyQueue {
@@ -39,21 +47,4 @@ private:
     stack<int> stcOut;
 };
 ```
-**1. O(N<sup>2</sup>)时间复杂度**
-```c++
-class Solution {
-public:
-    vector<int> twoSum(vector<int>& nums, int target) {
-        vector<int> res;
-        for (int i = 0; i < nums.size() - 1; i++) {
-            for (int j = i + 1; j < nums.size(); j++ ) {
-                if (nums[i] + nums[j] == target) {
-                    res.push_back(i), res.push_back(j);
-                    return res;
-                }
-            }
-        }
-        return res;
-    }
-};
-```
+
