--- a/2023.1.2.md
+++ b/2023.1.2.md
@@ -7,6 +7,8 @@ int pop() 从队列的开头移除并返回元素
 int peek() 返回队列开头的元素
 boolean empty() 如果队列为空，返回 true ；否则，返回 false
 ```
+### 示意图
+![image1](https://github.com/gcc4444/leetcode_clj/blob/main/image/Xnip2023-01-02_11-37-04.jpg)
 
 ```c++
 class MyQueue {
