--- a/2023.1.2.md
+++ b/2023.1.2.md
@@ -1,4 +1,4 @@
-## 232. 用栈实现队列
+## [232. 用栈实现队列](https://leetcode.cn/problems/implement-queue-using-stacks/)
 ### 题目要求
 实现 MyQueue 类：
 ```
@@ -49,4 +49,16 @@ private:
     stack<int> stcOut;
 };
 ```
+### 查缺补漏
+```
+1.c++中stack的pop()不会返回首元素，返回类型为void。top()才会返回首元素。 
+2.stack返回首元素的接口是top()，而queue 返回首元素的接口是front()。
+3.为了能够返回首元素的引用call by reference（更快），而不是call by value（更慢），所以 stack 和 queue的pop()接口都不会返回首元素（因为当首元素被pop后，首元素已经消失，无法引用），而是返回void。当你需要首元素时，通过调用stack.top() 或者 queue.front() 这两个接口通过引用传回(call by reference)会更快。
+4.queue接口
+ ![](https://github.com/gcc4444/leetcode_clj/blob/main/image/queue_interface.png)
+5.stack接口
+ ![](https://github.com/gcc4444/leetcode_clj/blob/main/image/stack_interface.png)
+```
+### 参考解答
+1. [代码随想录](https://www.programmercarl.com/0232.用栈实现队列.html#拓展)
 
