--- a/2023.1.2.md
+++ b/2023.1.2.md
@@ -61,4 +61,4 @@ private:
  ![image_stack](https://github.com/gcc4444/leetcode_clj/blob/main/image/stack_interface.png)
 ### 参考解答
 1. [代码随想录](https://www.programmercarl.com/0232.用栈实现队列.html#拓展)
-
+2. [视频讲解]（https://www.bilibili.com/video/BV1nY4y1w7VC/?vd_source=4ef91bcb0b666473e84f16e2a088533b）
