--- a/2023.1.2.md
+++ b/2023.1.2.md
@@ -1,6 +1,6 @@
 ## [232. 用栈实现队列](https://leetcode.cn/problems/implement-queue-using-stacks/)
 ### 题目要求
-实现 MyQueue 类：
+`实现 MyQueue 类：`
 ```
 void push(int x) 将元素 x 推到队列的末尾
 int pop() 从队列的开头移除并返回元素
@@ -10,6 +10,7 @@ boolean empty() 如果队列为空，返回 true ；否则，返回 false
 ### 示意图
 ![image1](https://github.com/gcc4444/leetcode_clj/blob/main/image/Xnip2023-01-02_11-37-04.jpg)
 
+### 代码
 ```c++
 class MyQueue {
 public:
@@ -62,3 +63,49 @@ private:
 ### 参考解答
 1. [代码随想录](https://www.programmercarl.com/0232.用栈实现队列.html#拓展)
 2. [视频讲解](https://www.bilibili.com/video/BV1nY4y1w7VC/?vd_source=4ef91bcb0b666473e84f16e2a088533b)
+
+## [225. 用队列实现栈](https://leetcode.cn/problems/implement-stack-using-queues/)
+
+### 代码
+```c++
+class MyStack {
+public:
+    queue<int> que;
+    MyStack() {
+
+    }
+    
+    void push(int x) {
+        que.push(x);
+    }
+    
+    int pop() {
+        int size = que.size();
+        while(--size) {
+            que.push(que.front());
+            que.pop();
+        }
+        int res = que.front();
+        que.pop();
+        return res;
+    }
+    
+    int top() {
+        return que.back();
+    }
+    
+    bool empty() {
+        return que.empty();
+    }
+};
+```
+
+### 题目要求
+`实现 MyStack 类：`
+```
+void push(int x) 将元素 x 压入栈顶。
+int pop() 移除并返回栈顶元素。
+int top() 返回栈顶元素。
+boolean empty() 如果栈是空的，返回 true ；否则，返回 false 。
+```
+
