--- a/2023.1.2.md
+++ b/2023.1.2.md
@@ -108,4 +108,7 @@ int pop() 移除并返回栈顶元素。
 int top() 返回栈顶元素。
 boolean empty() 如果栈是空的，返回 true ；否则，返回 false 。
 ```
+### 示意图
+![image2](https://github.com/gcc4444/leetcode_clj/blob/main/image/Xnip2023-01-02_17-35-22.jpg)
+
 
