--- a/2023.1.2.md
+++ b/2023.1.2.md
@@ -62,9 +62,20 @@ private:
  ![image_stack](https://github.com/gcc4444/leetcode_clj/blob/main/image/stack_interface.png)
 ### 参考解答
 1. [代码随想录](https://www.programmercarl.com/0232.用栈实现队列.html#拓展)
-2. [视频讲解](https://www.bilibili.com/video/BV1nY4y1w7VC/?vd_source=4ef91bcb0b666473e84f16e2a088533b)
+2. [视频讲解](https://www.bilibili.com/video/BV1nY4y1w7VC/)
 
 ## [225. 用队列实现栈](https://leetcode.cn/problems/implement-stack-using-queues/)
+
+### 题目要求
+`实现 MyStack 类：`
+```
+void push(int x) 将元素 x 压入栈顶。
+int pop() 移除并返回栈顶元素。
+int top() 返回栈顶元素。
+boolean empty() 如果栈是空的，返回 true ；否则，返回 false 。
+```
+### 示意图
+![image2](https://github.com/gcc4444/leetcode_clj/blob/main/image/Xnip2023-01-02_17-35-22.jpg)
 
 ### 代码
 ```c++
@@ -99,16 +110,11 @@ public:
     }
 };
 ```
+### 查缺补漏
+`1.queue.front() 和 stack.top() 容易搞混、忘记`
 
-### 题目要求
-`实现 MyStack 类：`
-```
-void push(int x) 将元素 x 压入栈顶。
-int pop() 移除并返回栈顶元素。
-int top() 返回栈顶元素。
-boolean empty() 如果栈是空的，返回 true ；否则，返回 false 。
-```
-### 示意图
-![image2](https://github.com/gcc4444/leetcode_clj/blob/main/image/Xnip2023-01-02_17-35-22.jpg)
+### 参考解答
+1. [代码随想录](https://www.programmercarl.com/0225.用队列实现栈.html)
+2. [视频讲解](https://www.bilibili.com/video/BV1Fd4y1K7sm)
 
 
