--- a/1.17.md
+++ b/1.17.md
@@ -36,3 +36,52 @@ public:
     }
 };
 ```
+
+## [144. Binary Tree Preorder Traversal](https://leetcode.cn/problems/binary-tree-preorder-traversal/)
+### 递归法：
+```c++
+class Solution {
+public:
+    void preorderFun(TreeNode* root, vector<int>& res) {
+        if (root == nullptr) {
+            return;
+        }
+        res.push_back(root->val);
+        preorderFun(root->left, res);
+        preorderFun(root->right, res);
+    }
+    vector<int> preorderTraversal(TreeNode* root) {
+        vector<int> res;
+        preorderFun(root, res);
+        return res;
+        
+    }
+};
+```
+### 迭代法：（使用stack）
+```c++
+class Solution {
+public:
+    
+    vector<int> preorderTraversal(TreeNode* root) {
+        vector<int> res;
+        stack<TreeNode*> st;//注意st中存储的类型是TreeNode*，不是int
+        if (root == nullptr) {
+            return res;
+        }
+        st.push(root);
+        while (!st.empty()) {
+            TreeNode* cur = st.top();
+            st.pop();
+            res.push_back(cur->val);
+            if (cur->right != nullptr) {
+                st.push(cur->right);
+            }
+            if (cur->left != nullptr) {
+                st.push(cur->left);
+            }
+        }
+        return res;
+    }
+};
+```
