--- a/1.17.md
+++ b/1.17.md
@@ -85,3 +85,94 @@ public:
     }
 };
 ```
+
+## [145. 二叉树的后序遍历](https://leetcode.cn/problems/binary-tree-postorder-traversal/)
+### 递归法：
+```c++
+class Solution {
+public:
+    void postorderFun(TreeNode* cur, vector<int>& res) {
+        if (cur == nullptr) {
+            return;
+        }
+        postorderFun(cur->left, res);
+        postorderFun(cur->right, res);
+        res.push_back(cur->val);
+        return;
+    }
+    vector<int> postorderTraversal(TreeNode* root) {
+        vector<int> res;
+        postorderFun(root, res);
+        return res;
+    }
+};
+```
+### ‼️迭代法
+`❌答案`
+```c++
+class Solution {
+public:
+    vector<int> postorderTraversal(TreeNode* root) {
+        vector<int> res;
+        stack<TreeNode*> st;
+        TreeNode* last;
+        if (root == nullptr) {
+            return res;
+        }
+        st.push(root);
+        while (!st.empty()) {
+            TreeNode* cur = st.top();
+            while (cur->left != nullptr && cur->left != last) {
+                cur = cur->left;
+                st.push(cur);
+            }
+            if (cur->right != nullptr && cur->right != last) {//cur->right != last很重要
+                cur = cur->right;
+                st.push(cur);
+            }
+            else {
+                cur = st.top();
+                last = cur;
+                res.push_back(cur->val);
+                st.pop();
+            }
+        }
+        return res;
+    }
+};
+```
+`✅答案`
+```c++
+class Solution {
+public:
+    vector<int> postorderTraversal(TreeNode* root) {
+        vector<int> res;
+        stack<TreeNode*> st;
+        TreeNode* last;
+        if (root == nullptr) {
+            return res;
+        }
+        st.push(root);
+        TreeNode* cur = root;
+        while (!st.empty()) {
+            while (cur != nullptr && cur->left != nullptr) {
+                cur = cur->left;
+                st.push(cur);
+            }
+            cur = st.top();//cur=st.top()不能在while循环之前，因为访问完当前元素后取栈顶时，不能再去左边让左边进栈了
+            if (cur->right != nullptr && cur->right != last) {//cur->right != last很重要
+                cur = cur->right;
+                st.push(cur);
+            }
+            else {
+                cur = st.top();
+                last = cur;
+                res.push_back(cur->val);
+                st.pop();//访问完当前元素了，说明当前元素没有左右儿子，那么回去后第一个while不会执行。
+                cur = nullptr;//防止再向左遍历
+            }
+        }
+        return res;
+    }
+};
+```
