--- a/1.17.md
+++ b/1.17.md
@@ -175,4 +175,38 @@ public:
         return res;
     }
 };
+`第二次解答`
+```
+```c++
+class Solution {
+public:
+    vector<int> postorderTraversal(TreeNode* root) {
+        //迭代法：
+        stack<TreeNode*> st;
+        vector<int> res;
+        TreeNode* last, *cur;//不能定义为TreeNode* last, cur;
+        if (root == nullptr) return res;
+        st.push(root);
+        cur = st.top();
+        while(!st.empty()) {
+            while (cur != nullptr && cur->left != nullptr) {
+                st.push(cur->left);
+                cur = cur->left;
+            }
+            cur = st.top();//栈里的每一个节点的左儿子都已经访问过了，在while后写，直接去右儿子
+            if (cur->right != nullptr && cur->right != last) {
+                st.push(cur->right);
+                cur = cur->right;
+            }
+            else {
+                res.push_back(cur->val);
+                st.pop();
+                last = cur;//记录上一次访问的节点，防止再次进入右儿子
+                cur = nullptr;//防止再次进入左儿子
+            }
+        }
+        return res;
+
+    }
+};
 ```
