--- a/1.24.md
+++ b/1.24.md
@@ -1,4 +1,4 @@
-[102. 二叉树的层序遍历](https://leetcode.cn/problems/binary-tree-level-order-traversal/)
+## [102. 二叉树的层序遍历](https://leetcode.cn/problems/binary-tree-level-order-traversal/)
 ```c++
 class Solution {
 public:
@@ -27,3 +27,51 @@ public:
     }
 };
 ```
+## [226. 翻转二叉树](https://leetcode.cn/problems/invert-binary-tree/)
+### 递归法
+```c++
+class Solution {
+public:
+    TreeNode* invertTree(TreeNode* root) {
+        if (root == nullptr) {
+            return root;
+        }
+        TreeNode* cur = root->left;
+        root->left = root->right;
+        root->right = cur;
+        invertTree(root->left);
+        invertTree(root->right);
+        return root;
+    }
+};
+```
+### 迭代法
+```c++
+class Solution {
+public:
+    TreeNode* invertTree(TreeNode* root) {
+        if (root == nullptr) {
+            return root;
+        }
+        stack<TreeNode*> st;
+        st.push(root);
+        while(!st.empty()) {
+            TreeNode* cur = st.top();
+            st.pop();
+            TreeNode* temp = cur->left;
+            cur->left = cur->right;
+            cur->right = temp;
+            if (cur->right != nullptr) {
+                st.push(cur->right);//前序遍历，右儿子先入栈
+            }
+            if (cur->left != nullptr) {
+                st.push(cur->left);
+            }
+        }
+        return root;
+    }
+};
+```
+
+
+
