--- a/1.26.md
+++ b/1.26.md
@@ -29,3 +29,40 @@ public:
 };
 ```
 ### 迭代法：使用队列：半层序遍历
+`示意图`
+![image](https://github.com/gcc4444/leetcode_clj/blob/main/image/对称二叉树：迭代法——队列.jpeg)
+`代码`
+```c++
+class Solution {
+public:
+    bool isSymmetric(TreeNode* root) {
+        if (root == nullptr) {
+            return true;
+        }
+        TreeNode* left = root->left;
+        TreeNode* right = root->right;
+        queue<TreeNode*> que;
+        que.push(left);
+        que.push(right);
+        while (!que.empty()) {
+            left = que.front();
+            que.pop();
+            right = que.front();
+            que.pop();
+            if (left == nullptr && right == nullptr) {
+                continue;
+            }
+            else if (left == nullptr || right == nullptr || left->val != right->val) {
+                return false;//任意只有一边为null，或者左右不等
+            }
+            else {//否则就只有都不为空，且都相等了
+                que.push(left->left);
+                que.push(right->right);
+                que.push(left->right);
+                que.push(right->left);
+            }
+        }
+        return true;//队列为空，说明比完所有节点了。没有返回false，说明对称节点都相等，返回true
+    }
+};
+```
