--- a/1.26.md
+++ b/1.26.md
@@ -66,3 +66,38 @@ public:
     }
 };
 ```
+### 迭代法：使用栈
+```c++
+class Solution {
+public:
+    bool isSymmetric(TreeNode* root) {
+        if (root == nullptr) {
+            return true;
+        }
+        TreeNode* left = root->left;
+        TreeNode* right = root->right;
+        stack<TreeNode*> st;
+        st.push(left);
+        st.push(right);
+        while (!st.empty()) {
+            right = st.top();
+            st.pop();
+            left = st.top();
+            st.pop();
+            if (left == nullptr && right == nullptr) {
+                continue;
+            }
+            else if (left == nullptr || right == nullptr || left->val != right->val) {
+                return false;//任意只有一边为null，或者左右不等
+            }
+            else {//否则就只有都不为空，且都相等了
+                st.push(left->left);
+                st.push(right->right);
+                st.push(left->right);
+                st.push(right->left);
+            }
+        }
+        return true;//队列为空，说明比完所有节点了。没有返回false，说明对称节点都相等，返回true
+    }
+};
+```
