--- a/1.26.md
+++ b/1.26.md
@@ -101,3 +101,54 @@ public:
     }
 };
 ```
+# 同类型题：
+## [100. 相同的树](https://leetcode.cn/problems/same-tree/)
+```c++
+class Solution {
+public:
+    bool isSameTree(TreeNode* p, TreeNode* q) {
+        if (p == nullptr && q == nullptr) {
+            return true;
+        }
+        else if (p == nullptr || q == nullptr || p->val != q->val) {
+            return false;
+        }
+        else {
+            //只剩下都不为空，且值都相等
+            bool left = isSameTree(p->left, q->left);
+            bool right = isSameTree(p->right, q->right);
+            return left && right;
+        }
+    }
+};
+```
+### 迭代法
+```c++
+class Solution {
+public:
+    bool isSameTree(TreeNode* p, TreeNode* q) {
+        stack<TreeNode*> st;
+        st.push(p);
+        st.push(q);
+        while (!st.empty()) {
+            TreeNode* left = st.top();
+            st.pop();
+            TreeNode* right = st.top();
+            st.pop();
+            if (left == nullptr && right == nullptr) {
+                continue;
+            }
+            else if (left == nullptr || right == nullptr || left->val != right->val) {
+                return false;
+            }
+            else {
+                st.push(left->left);
+                st.push(right->left);
+                st.push(left->right);
+                st.push(right->right);
+            }
+        }
+        return true;
+    }
+};
+```
