--- a/1.26.md
+++ b/1.26.md
@@ -153,3 +153,66 @@ public:
     }
 };
 ```
+## [572. 另一棵树的子树](https://leetcode.cn/problems/subtree-of-another-tree/)
+`当root和subroot都可以为空时：`
+```c++
+class Solution {
+public:
+    bool isSame(TreeNode* root, TreeNode* subRoot) {//比较是否完全相等
+        if (root == nullptr && subRoot == nullptr) {
+            return true;
+        }
+        else if (root == nullptr || subRoot == nullptr || root->val != subRoot->val) {
+            return false;
+        }
+        else {
+            return isSame(root->left, subRoot->left) && isSame(root->right, subRoot->right);
+        }
+    }
+    bool isSubtree(TreeNode* root, TreeNode* subRoot) {
+        if (root == nullptr && subRoot!= nullptr) return false;
+        if (isSame(root, subRoot)) {//如果该树和子树一样，返回true
+            return true;
+        }
+        else if (root->left != nullptr && root->right != nullptr) {//如果该树和子树不一样，且该树的左右儿子都存在，那么比较他的左右儿子是否与子树一样
+            return isSubtree(root->left, subRoot) || isSubtree(root->right, subRoot);
+        }
+        else if (root->left == nullptr && root->right == nullptr) {//如果该树与子书不一样，没有左右儿子，那么该树及其子树都不可能匹配
+            return false;
+        }
+        else if (root->left == nullptr) {//如果该树与子树不一样，但是仅有左儿子，就去判断左儿子是否与子树一样
+            return isSubtree(root->right, subRoot);
+        }
+        else {//如果该树与子树不一样，但是仅有右儿子，就去判断右儿子是否与子树一样
+            return isSubtree(root->left, subRoot);
+        }
+    }
+};
+```
+`当root和subroot都不可是空树时`
+```c++
+class Solution {
+public:
+    bool isSame(TreeNode* root, TreeNode* subRoot) {//比较是否完全相等
+        if (root == nullptr && subRoot == nullptr) {
+            return true;
+        }
+        else if (root == nullptr || subRoot == nullptr || root->val != subRoot->val) {
+            return false;
+        }
+        else {
+            return isSame(root->left, subRoot->left) && isSame(root->right, subRoot->right);
+        }
+    }
+    bool isSubtree(TreeNode* root, TreeNode* subRoot) {
+        if (root == nullptr) return false;//由于subroot>1，不用比了，肯定不匹配
+        else if (isSame(root, subRoot)) {
+            return true;
+        }
+        else {
+            return isSubtree(root->left, subRoot) || isSubtree(root->right, subRoot);
+        }
+
+    }
+};
+```
