--- a/1.26.md
+++ b/1.26.md
@@ -216,3 +216,63 @@ public:
     }
 };
 ```
+## [104. 二叉树的最大深度](https://leetcode.cn/problems/maximum-depth-of-binary-tree/)
+### 递归法
+```c++
+class Solution {
+public:
+    int maxDepth(TreeNode* root) {
+        if (root == nullptr) {
+            return 0;
+        }
+        else {
+            return max(maxDepth(root->left), maxDepth(root->right)) + 1;
+        }
+    }
+};
+```
+### 迭代法
+```c++
+class Solution {
+public:
+    int maxDepth(TreeNode* root) {
+        int depth = 0;
+        if (root == nullptr) {
+            return depth;
+        }
+        queue<TreeNode*> que;
+        que.push(root);
+        while(!que.empty()) {
+            depth++;//深度=层数
+            int size = que.size();
+            while(size--) {//将这一层的节点从队列中取出，把下一层的所有节点加入队列
+                TreeNode* cur = que.front();
+                que.pop();
+                if (cur->left != nullptr) {
+                    que.push(cur->left);
+                }
+                if (cur->right != nullptr) {
+                    que.push(cur->right);
+                }
+            }
+        }
+        return depth;
+    }
+    ```
+    
+    class Solution {
+public:
+    int maxDepth(Node* root) {
+        int max_num = 0;
+        if (root == nullptr) {
+            return max_num;
+        }
+        else {
+            int num = root->children.size();
+            for (int i = 0; i < num; i++) {
+                max_num = max(max_num, maxDepth(root->children[i]));
+            }    
+        }
+        return max_num + 1;
+    }
+};
